Home page header image jumping issue fix on desktop (reverted from commit 638674e3efd9cf43795de55131d309a3a29f91bb)

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,6 @@
-
+.skrollr-desktop #wrapper.skrollable-after {
+	margin-top: 400px;
+}
 
 #wrapper-header-holder{
 	min-height: 685px;
